// Copyright (c) 2011 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package enterprise_management;

message DevicePolicyRefreshRateProto {
  // In milliseconds.
  optional int64 policy_refresh_rate = 1;
}

message UserWhitelistProto {
  repeated string user_whitelist = 1;
}

message GuestModeEnabledProto {
  // Determines if guests are allowed to log in to the device.
  // Should default to true.
  optional bool guest_mode_enabled = 1;
}

message ShowUserNamesOnSigninProto {
  // Determines if we show pods for existing users on the sign in screen.
  // Should default to true.
  optional bool show_user_names = 1;
}

message DataRoamingEnabledProto {
  // Determines if cellular data roaming is enabled.  Should default to false.
  optional bool data_roaming_enabled = 1;
}

message DeviceProxySettingsProto {
  // One of "direct", "auto_detect", "pac_script", "fixed_servers", "system"
  optional string proxy_mode = 1;
  optional string proxy_server = 2;
  optional string proxy_pac_url = 3;
  optional string proxy_bypass_list = 4;
}

message ChromeDeviceSettingsProto {
  optional DevicePolicyRefreshRateProto policy_refresh_rate = 1;
  optional UserWhitelistProto user_whitelist = 2;
  optional GuestModeEnabledProto guest_mode_enabled = 3;
  optional DeviceProxySettingsProto device_proxy_settings = 4;
  optional ShowUserNamesOnSigninProto show_user_names = 5;
  optional DataRoamingEnabledProto data_roaming_enabled = 6;
}
